// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders movie card correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "flex": 1,
      "margin": 8,
      "opacity": 1,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#fff",
        },
        {
          "borderRadius": 12,
          "overflow": "hidden",
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 4,
        },
      ]
    }
  >
    <View
      style={
        {
          "position": "relative",
        }
      }
    >
      <Image
        resizeMode="cover"
        source={
          {
            "uri": "https://image.tmdb.org/t/p/w342/test-path.jpg",
          }
        }
        style={
          {
            "aspectRatio": 0.6666666666666666,
            "width": "100%",
          }
        }
      />
      <View
        style={
          {
            "bottom": 8,
            "position": "absolute",
            "right": 8,
          }
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "#fff",
              },
              {
                "backgroundColor": "#0a7ea4",
                "borderRadius": 16,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#11181C",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                {
                  "color": "white",
                  "fontSize": 12,
                  "fontWeight": "bold",
                },
              ]
            }
          >
            7.5
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "gap": 4,
          "padding": 12,
        }
      }
    >
      <Text
        numberOfLines={2}
        style={
          [
            {
              "color": "#11181C",
            },
            undefined,
            undefined,
            {
              "fontSize": 16,
              "fontWeight": "600",
              "lineHeight": 24,
            },
            undefined,
            undefined,
            undefined,
          ]
        }
      >
        Test Movie
      </Text>
      <Text
        style={
          [
            {
              "color": "#11181C",
            },
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            {
              "fontSize": 14,
              "opacity": 0.7,
            },
          ]
        }
      >
        January 1, 2023
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders movie card without poster correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "flex": 1,
      "margin": 8,
      "opacity": 1,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#fff",
        },
        {
          "borderRadius": 12,
          "overflow": "hidden",
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 4,
        },
      ]
    }
  >
    <View
      style={
        {
          "position": "relative",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "aspectRatio": 0.6666666666666666,
            "backgroundColor": "#d1d1d1",
            "justifyContent": "center",
            "width": "100%",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#11181C",
              },
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
            ]
          }
        >
          No Image
        </Text>
      </View>
      <View
        style={
          {
            "bottom": 8,
            "position": "absolute",
            "right": 8,
          }
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "#fff",
              },
              {
                "backgroundColor": "#0a7ea4",
                "borderRadius": 16,
                "paddingHorizontal": 8,
                "paddingVertical": 4,
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#11181C",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                {
                  "color": "white",
                  "fontSize": 12,
                  "fontWeight": "bold",
                },
              ]
            }
          >
            7.5
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "gap": 4,
          "padding": 12,
        }
      }
    >
      <Text
        numberOfLines={2}
        style={
          [
            {
              "color": "#11181C",
            },
            undefined,
            undefined,
            {
              "fontSize": 16,
              "fontWeight": "600",
              "lineHeight": 24,
            },
            undefined,
            undefined,
            undefined,
          ]
        }
      >
        Test Movie
      </Text>
      <Text
        style={
          [
            {
              "color": "#11181C",
            },
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            {
              "fontSize": 14,
              "opacity": 0.7,
            },
          ]
        }
      >
        January 1, 2023
      </Text>
    </View>
  </View>
</View>
`;
